<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary"
    tools:context=".ui.activities.StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_link_current_ap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btn_link_current_ap"
        style="@style/text_white_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login_normal"
        android:text="@string/start_btn_current_link_ap"
        android:layout_marginHorizontal="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btn_link_scan_ap"
        style="@style/text_white_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login_normal"
        android:text="@string/start_btn_scan"
        android:layout_marginTop="@dimen/item_margin_20"
        android:layout_marginHorizontal="@dimen/dp_40"
        app:layout_constraintTop_toBottomOf="@id/btn_link_current_ap"
        app:layout_constraintStart_toStartOf="parent" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btn_link_input_ap"
        style="@style/text_white_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login_normal"
        android:text="@string/start_btn_input_link_ap"
        android:layout_marginTop="@dimen/item_margin_20"
        android:layout_marginHorizontal="@dimen/dp_40"
        app:layout_constraintTop_toBottomOf="@id/btn_link_scan_ap"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>